xmonad/xmonad.errors

xmonad.hs:81:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
81 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 3) | x <- my4Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:82:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
82 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 4) | x <- my5Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:83:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
83 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 5) | x <- my6Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:84:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
84 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 6) | x <- my7Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:85:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
85 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 7) | x <- my8Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:86:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
86 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 8) | x <- my9Shifts]
   |                                                                ^^^^^^^^^^^^

xmonad.hs:87:64: error:
    • Variable not in scope:
        doShiftandGo
          :: [Char]
             -> Query (base-4.14.2.0:Data.Semigroup.Internal.Endo WindowSet)
    • Perhaps you meant ‘doShiftAndGo’ (line 90)
   |
87 |     , [(className =? x <||> title =? x <||> resource =? x) --> doShiftandGo (myWorkspaces !! 9) | x <- my10Shifts]
   |                                                                ^^^^^^^^^^^^
